--- a/assets/stylesheets/notifications.scss
+++ b/assets/stylesheets/notifications.scss
@@ -1,10 +1,4 @@
-.rad-dropdowns-element {
-  border: 1px solid #e9e9e9;
-  padding: 0.5rem;
-  margin: 15px 0;
-}
-
-.rad-option-element {
+.rad-tabs-element {
   border: 1px solid #e9e9e9;
   padding: 0.5rem;
   margin: 15px 0;
